--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,7 @@ button:focus{
 
 
 .qt-background{
-	background: url(../images/fon.jpg) no-repeat;
+	background: url(https://github.com/Maverick9519/ALLAShop/blob/main/images/fon.jpg?raw=true) no-repeat;
 	background-size: 1500px 700px;
 	padding: 100px 0;
 	background-attachment: fixed;
